<resources>
    <string name="app_name">SimpleCounter</string>
    <string name="app_title">Simple Counter</string>

    <string name="bpm" translatable="false">BPM</string>
    <string name="_120" translatable="false">120</string>
    <string name="_60" translatable="false">60</string>
    <string name="_40" translatable="false">40</string>

    <string name="timer">Timer</string>
    <string name="counter">Counter</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="bpm_calc">BPM \n Calculator</string>
    <string name="bpm_calc_menu">BPM Calculator</string>
    <string name="zero" translatable="false">0</string>
    <string name="zero_decimal" translatable="false">0.000</string>
    <string name="bpm_suffix">  BPM</string>
    <string name="plus_sign" translatable="false">+</string>

    <string name="select_bpm_text">Please select BPM, enter manually, use \'BPM Calculator\', or
    calculator icon from menu</string>

    <string name="bpm_calc_instructions">Use the \"+\" button to record each event while the timer is
         running.\nClick Stop to calculate the bpm.\nClick Done to go back to the Home Screen.
    </string>

    <string name="bpm_calc_instructions_landscape">Use the \"+\" button to record each event while the timer is
         running.\nClick Stop to calculate the bpm. Click Done to go back to the Home Screen.
    </string>

    <string name="about_text">
        Simple Counter app is designed, developed, and released by Khashayar “Khash” Mortazavi
        (www.khash.tech)  and is a completely free, ad-free app that does not require any
        permission, nor does it collect any user data of any kind.
        \n\nThis is the initial release of this app, and we would greatly appreciated your comments
        and suggestions. You can either contact using the ‘contact’ in application’s menu,
        through Google Play, or simply by sending an email to SimpleCounter@khash.tech
        \n\n\nThank you for your support, and happy counting!
    </string>

    <string name="share_dialog_title">Check this app out!</string>
    <string name="google_play_address" translatable="false">https://play.google.com/store/apps/details?id=tech.khash.simplecounter</string>
    <string name="share_intent_title">Share Simple Counter</string>
    <string name="contact_email" translatable="false">simplecounter@khash.tech</string>
    <string name="rate">Rate</string>


</resources>
